--- a/news/2019-05-29-long-blog-post.mdx
+++ b/news/2019-05-29-long-blog-post.mdx
@@ -9,7 +9,7 @@ import Utterances from 'utterances-react';
 这是我的长博客文章内容。
 
 <Utterances
-  repo="lbykoo/utterances"
+  repo="lbykoo/docusaurus"
   issueTerm="pathname" 
   theme="github-light"
 />
