--- a/news/2019-05-29-long-blog-post.mdx
+++ b/news/2019-05-29-long-blog-post.mdx
@@ -10,6 +10,6 @@ import Utterances from 'utterances-react';
 
 <Utterances
   repo="lbykoo/docusaurus"
-  issueTerm="pathname" 
+  issueTerm="url" 
   theme="github-light"
 />
