--- a/news/2019-05-29-long-blog-post.mdx
+++ b/news/2019-05-29-long-blog-post.mdx
@@ -1,7 +1,7 @@
 ---
 title: Introducing Docusaurus
 authors: slorber
-tags: [documentation, blog, docusaurus]
+tags: [hello]
 ---
 
 import Utterances from 'utterances-react'; 
