--- a/blog/默认文章.mdx
+++ b/blog/默认文章.mdx
@@ -1,7 +1,20 @@
 ---
+authors:
+  name: LiuJi Marting
+  title: LadysVoa maintainer
+  url: https://github.com/lbykoo
+  image_url: https://pic.ladysvoa.com/upload/avatar/a1.webp
+  page: 
+    permalink: '/authors/LiuJi-Marting'
+  socials:
+    github: lbykoo
 title: First Blog Post
-authors: [yangshun,slorber]
+date: 2024-08-09
 tags: [hello, docusaurus]
+keywords: [关键词]
+description: 描述
+image: https://pic.ladysvoa.com/upload/2024916/KI6yiICN6Bma57VZXyuLi.jpeg
+slug: /20240105/www
 ---
 
 import Utterances from 'utterances-react'; 
